@@ -8,12 +8,14 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
 
 import com.kh.jde.auth.model.vo.CustomUserDetails;
 import com.kh.jde.common.util.RequestNormalizer;
-import com.kh.jde.exception.S3ServiceFailureException;
-import com.kh.jde.file.service.S3Service;
+import com.kh.jde.exception.AccessDeniedException;
+import com.kh.jde.exception.AlreadyDeletedException;
+import com.kh.jde.exception.PostNotFoundException;
+import com.kh.jde.exception.UsernameNotFoundException;
+import com.kh.jde.file.service.S3FileManager;
 import com.kh.jde.review.model.dao.ReviewMapper;
 import com.kh.jde.review.model.dto.BestReviewListResponse;
 import com.kh.jde.review.model.dto.BestReviewPagingRequest;
@@ -44,53 +46,89 @@ import lombok.extern.log4j.Log4j2;
 public class ReviewServiceImpl implements ReviewService {
 	
 	private final ReviewMapper reviewMapper;
-	private final S3Service s3service;
+	private final S3FileManager s3manager;
 	private final ReviewValidator reviewValidator;
 	private final RequestNormalizer requestNormalizer;
+	
+	private final int DEFAULT_SCROLL = 5;
+	private final int RETRY_ATTEMPT = 5;
+	
 
+	/**
+	 * 리뷰 글 전체 목록 검색
+	 * 
+	 * 검색 시 정보를 QueryDTO 형태로 받아 nomarizedRequest()를 통해 사용자 정보와 스크롤을 주입한 후 
+	 * DB에 목록 조회를 요청합니다.
+	 * @param request 검색어/필터, 로그인 사용자, 스크롤, 커서를 포함한 request 정보
+	 * @param principal 사용자 정보, 비로그인의 경우 null 값
+	 * @return 조회해온 리뷰 글 전체 목록 ReviewListResponseDTO의 리스트 형태
+	 */
 	@Override
 	public List<ReviewListResponseDTO> getReviewList(QueryDTO request, CustomUserDetails principal) {
 		
 		// 쿼리DTO 가공
 		QueryDTO normalized = nomarizedRequest(request, principal);
 		
-		// 목록 조회
-		List<ReviewListResponseDTO> reviews = reviewMapper.getReviewList(normalized);
-		
-		return reviews;
+		return reviewMapper.getReviewList(normalized);
 	}
 	
+	/**
+	 * (미식대장) 리뷰 글 전체 목록 검색
+	 * 
+	 * 검색 시 정보를 QueryDTO 형태로 받아 nomarizedRequest()를 통해 사용자 정보와 스크롤을 주입한 후 
+	 * 추가로 CaptainQueryDTO를 생성해 미식대장의 Pk값과 기존 QueryDTO 값을 주입하여
+	 * DB에 목록 조회를 요청합니다.
+	 * @param request 검색어/필터, 로그인 사용자, 스크롤, 커서를 포함한 request 정보
+	 * @param principal 사용자 정보, 비로그인의 경우 null 값
+	 * @param captainNo 조회하려는 미식대장의 PK 정보
+	 * @return 조회해온 리뷰 글 전체 목록 ReviewListResponseDTO의 리스트 형태
+	 */
 	@Override
 	public List<ReviewListResponseDTO> getCaptainReviewList(QueryDTO request, CustomUserDetails principal, Long captainNo) {
-		// 미식대장쿼리DTO 가공
+		
+		// 검색쿼리DTO 가공
 		QueryDTO normalized = nomarizedRequest(request, principal);
-		CaptainQueryDTO captainNormalized = new CaptainQueryDTO();
-		captainNormalized.setCatptainNo(captainNo);
-		captainNormalized.setQuery(normalized);
 		
-		// 미식대장의 리뷰 목록 조회
-		List<ReviewListResponseDTO> captainReviews = reviewMapper.getCaptainReviewList(captainNormalized);
+		// 미식대장쿼리DTO 생성: 조회하려는 미식대장 PK 및 Query 주입
+		CaptainQueryDTO captainNormalized = new CaptainQueryDTO(captainNo, normalized);
 		
-		return captainReviews;
+		return reviewMapper.getCaptainReviewList(captainNormalized);
 	}
 	
+	/**
+	 * 검색 정보인 request를 받아 추가로 사용자 정보와 scroll 정보를 추가로 주입하여
+	 * QueryDTO를 가공하는 메서드
+	 * 
+	 * @param request 검색어/필터, 로그인 사용자, 스크롤, 커서를 포함한 request 정보
+	 * @param principal 사용자 정보, 비로그인의 경우 null 값
+	 * @return request 사용자 정보와 scroll이 주입되어 가공된 Query
+	 */
 	private QueryDTO nomarizedRequest(QueryDTO request, CustomUserDetails principal) {
 
-		// 0. query null 방지
+		// 0. request 자체가 null값을 방지
 		if(request == null) request = new QueryDTO();
 		
-		// 1. 로그인? 했으면 memberNo 주입 / 아니면 null
-		if(principal != null) {
-			request.setMemberNo(principal.getMemberNo());
-		} else {
-			request.setMemberNo(null);
-		}
+		// 1. 사용자가 로그인 했으면 memberNo 주입 / 비로그인 시 null 주입
+		request.setMemberNo(principal == null ? null : principal.getMemberNo());
 		
-		// 2. scroll 만들자
-		request.setScroll(requestNormalizer.applyScroll(request.getScroll(), 5)); 
+		// 2. scroll 값 주입
+		request.setScroll(requestNormalizer.applyScroll(request.getScroll(), DEFAULT_SCROLL)); 
+		
 		return request;
 	}
 
+	/**
+	 * 리뷰 글 상세 조회
+	 * 
+	 * reviewNo를 통해 리뷰 글을 조회하여
+	 * 요청받은 리뷰 글의 상세 정보: 게시글 정보, 작성자, 식당 정보, 이미지URL를 반환합니다.
+	 * 조회 시 먼저 조회수 증가 메서드를 실행하며, 리뷰-reviewNo와 사용자 정보-memberNo를 
+	 * Map<String, Object> 형태에 담아 파라미터로 사용하여 조회합니다.
+	 * 
+	 * @param reviewNo 게시글번호PK
+	 * @param principal 사용자 정보, 비로그인의 경우 null 값
+	 * @return 조회해온 리뷰 글 전체 목록 ReviewListResponseDTO의 리스트 형태
+	 */
 	@Override
 	@Transactional
 	public DetailReviewDTO getDetailReview(Long reviewNo, CustomUserDetails principal) {
@@ -98,14 +136,28 @@ public class ReviewServiceImpl implements ReviewService {
 		// 0. 조회수 먼저 증가
 		reviewMapper.increaseViewCount(reviewNo);
 
+		// 1. 파라미터 가공
 	    Map<String, Object> param = new HashMap<>();
 	    param.put("reviewNo", reviewNo);
-	    param.put("memberNo", principal == null ? null : principal.getMemberNo()); // 비로그인:
+	    param.put("memberNo", principal == null ? null : principal.getMemberNo());
 
 
 	    return reviewMapper.getDetailReview(param);
 	}
 
+	/**
+	 * 리뷰 글 삭제 (소프트)
+	 * 
+	 * reviewNo를 통해 게시글 상태와 작성자 여부 체크 등 유효성 검사 후 
+	 * 정상적으로 리뷰 글을 삭제(STATUS='N'으로 UPDATE)합니다.
+	 * 
+	 * @param reviewNo 게시글번호PK
+	 * @param principal 사용자 정보, 비로그인의 경우 null 값
+	 * @throws PostNotFoundException: 조회해온 review가 null, 조회된 결과가 없을 경우 
+	 * @throws AlreadyDeletedException: 조회해온 review의 필드 status가 n, 삭제된 게시물을 조회해온 경우
+	 * @throws AccessDeniedException: 조회해온 review의 필드 writer와 principal의 memberNo가 불일치, 작성자가 아닌 경우
+	 * @throws UsernameNotFoundException: 조회해온 review의 필드 writer가 null, 작성자를 찾을 수 없는 경우
+	 */
 	@Override
 	@Transactional
 	public void deleteById(Long reviewNo, CustomUserDetails principal) {
@@ -122,18 +174,22 @@ public class ReviewServiceImpl implements ReviewService {
 		
 		reviewValidator.validateResult(result);
 		
+		/* 
+		 * 소프트 삭제이므로 파일 삭제는 제외
+		 * 
 		// 4. 파일 조회
 		List<ReviewFileDTO> originFiles = reviewMapper.getFilesById(reviewNo);
 	    
 		// 5. s3 파일 삭제
-		for(ReviewFileDTO f : originFiles) {
-			try {
-				s3service.deleteFile(f.getFileUrl());
-			} catch (Exception e) {
-				deleteWitRetry(f.getFileUrl(), 5);
-			}
-		}
+		List<String> urls = originFiles.stream()
+		        .map(ReviewFileDTO::getFileUrl)
+		        .collect(Collectors.toList());
+
+		
+		s3manager.deleteUrls(urls, RETRY_ATTEMPT);
+		*/
 	}
+	
 	
 	private void getWriterById(Long reviewNo, CustomUserDetails principal, String action) {
 		reviewValidator.validateWriter(reviewMapper.getWriterById(reviewNo), principal.getMemberNo(), action);
@@ -143,120 +199,102 @@ public class ReviewServiceImpl implements ReviewService {
 		reviewValidator.validateReviewExists(reviewMapper.getExistsReview(reviewNo));
 	}
 
+	/**
+	 * 리뷰 글 등록
+	 * 
+	 * 요청받은 review의 유효성 검사와 
+	 * review의 식당 정보가 현재 DB에 저장되어있는지 조회하여 결과값이 없다면 식당 정보를 DB에 INSERT 작업을 먼저 진행합니다.
+	 * VO에 담아 review 글을 DB에 INSERT 합니다.
+	 * 이후 해당 리뷰에 매칭되는 키워드 정보를 DB에 INSERT 합니다.
+	 * DB 작업이 모두 수행되면 S3에 파일 업로드를 실행합니다.
+	 * 
+	 * @param review ReviewCreateRequest형태 review: 본문 정보, 식당 정보 및 MultipartFile 파일 리스트를 담습니다.
+	 * @param principal 사용자 정보, 비로그인의 경우 null 값
+	 */
 	@Override
 	@Transactional
 	public void create(ReviewCreateRequest review, CustomUserDetails principal) {
 		
 		
 		// 유효성검사 principal
+		reviewValidator.validateReview(review);
 		
+		// 식당 조회 -> 있으면 No반환 없으면 INSERT
+		Long restaurantNo = getRestaurantOrCreate(review);
 		
-		// 식당 조회 -> 있으면 No반환 없으면 insert
-		RestaurantRequestDTO requestRestaurant = RestaurantRequestDTO.builder()
-				.normalName(review.getNormalName())
-				.address(review.getAddress())
-				.build();
-		RestaurantResponseDTO restaurantResponse = reviewMapper.getRestaurantByName(requestRestaurant);
-		Long restaurantNo;
-		
-		// 식당이 없다면 db생성
-		if(restaurantResponse == null) {
-			
-			RestaurantCreateVO createRestaurant = RestaurantCreateVO.builder()
-					.normalName(review.getNormalName())
-					.address(review.getAddress())
-					.latitude(review.getLatitude())
-					.longitude(review.getLongitude())
-					.build();
-			
-			log.info("normalName={}, address={}", createRestaurant.getNormalName(), createRestaurant.getAddress());
-			
-			reviewMapper.createRestaurant(createRestaurant);
-			restaurantNo = createRestaurant.getRestaurantNo();
-		} else {
-			restaurantNo = restaurantResponse.getRestaurantNo();
-		}
-		
+		// 게시글 등록 INSERT
 		ReviewCreateVO requestReview = ReviewCreateVO.builder()
-				.memberNo(principal.getMemberNo())
-				.restaurantNo(restaurantNo)
-				.content(review.getContent())
-				.rating(review.getRating())
-				.build();
+													.memberNo(principal.getMemberNo())
+													.restaurantNo(restaurantNo)
+													.content(review.getContent())
+													.rating(review.getRating())
+													.build();
 		
 		reviewMapper.createReview(requestReview);
+		
 		Long reviewNo = requestReview.getReviewNo();
 		
 		reviewMapper.createReviewKeywordMap(reviewNo, review.getKeywordNos());
 		
-		// 파일 S3 저장 -> 반환받은 URL을 DB 저장
-		createFiles(reviewNo, review.getImages());
+		// 파일 S3 저장
+		List<String> uploadUrls = s3manager.createFiles("review", reviewNo, review.getImages(), RETRY_ATTEMPT);
+		
+		// DB에 파일 URL 저장 INSERT
+		createFiles(reviewNo, uploadUrls);
 		
 		
 	}
 	
-	// S3 저장 메서드
-	private void createFiles(Long reviewNo, List<MultipartFile> images) {
-		List<String> uploadUrl = new ArrayList<>();
+	private Long getRestaurantOrCreate(ReviewCreateRequest review) {
 		
+		RestaurantRequestDTO requestRestaurant = RestaurantRequestDTO.builder()
+				.normalName(review.getNormalName())
+				.address(review.getAddress())
+				.build();
+		
+		RestaurantResponseDTO restaurantResponse = reviewMapper.getRestaurantByName(requestRestaurant);
+		
+		if(restaurantResponse == null) createRestaurant(review);
+		
+		return restaurantResponse.getRestaurantNo();
+	}
+	
+	private Long createRestaurant(ReviewCreateRequest review) {
+		
+		RestaurantCreateVO createRestaurant = RestaurantCreateVO.builder()
+																.normalName(review.getNormalName())
+																.address(review.getAddress())
+																.latitude(review.getLatitude())
+																.longitude(review.getLongitude())
+																.build();
+		
+		reviewMapper.createRestaurant(createRestaurant);
+		
+		return createRestaurant.getRestaurantNo();
+	}
+
+	private void createFiles(Long reviewNo, List<String> urls) {
 		try {
+			int order = 1;
 			
-			if (images != null) {
+			for(String url : urls) {
+				if(url == null || url.isEmpty()) continue;
 				
-				int order = 1;
-				
-				for (MultipartFile f : images) {
-					
-					if (f == null || f.isEmpty()) continue;
-					
-					String url = s3service.fileSave(f, "reviews/" + reviewNo);
-					uploadUrl.add(url);
-					
-					reviewMapper.createReviewFile(
-							ReviewFileCreateVO.builder()
-							.reviewNo(reviewNo)
-							.fileUrl(url)
-							.sortOrder(order)
-							.isThumbnail(order == 1 ? "Y" : "N")
-							.build()
-							);
-					order++;
-				}
+				reviewMapper.createReviewFile(ReviewFileCreateVO.builder()
+																.reviewNo(reviewNo)
+																.fileUrl(url)
+																.sortOrder(order)
+																.isThumbnail(order == 1 ? "Y" : "N")
+																.build());
+				order++;
 			}
 		} catch (Exception e) {
-			// 예외 발생 시: 이전까지 업로드한 uploadUrl 전부 삭제 처리(되돌림)
-			for (String url : uploadUrl) {
-				try { 
-					s3service.deleteFile(url);
-				} catch (Exception ignore) {
-					// 실패 시 재시도
-					deleteWitRetry(url, 5);
-				}
-			}
-			throw e;
+			e.printStackTrace();
 		}
 	}
+	
 
-	// 파일 삭제 재시도 메서드
-	private void deleteWitRetry(String url, int maxAttempt) {
-		int attempt = 0;
-		
-		while(true) {
-			// 삭제 성공 시 바로 돌아감
-			try {
-				s3service.deleteFile(url);
-				return;
-				// 실패 시 시도 횟수 count 하며 재시도, 특정 횟수 넘어가면 예외로 던져버리기
-			} catch (Exception e) {
-				attempt++;
-				if(attempt >= maxAttempt) {
-					e.printStackTrace();
-					throw new S3ServiceFailureException(url + ": 파일 업로드에 실패했습니다.");
-				}
-			}
-		}
-	}
-
+	
 	@Override
 	public List<ReviewListResponseDTO> getMyReviewList(QueryDTO req, CustomUserDetails principal) {
 	    // 1. 로그인 사용자 정보 및 기본값 세팅
@@ -270,6 +308,22 @@ public class ReviewServiceImpl implements ReviewService {
 	    return reviews;
 	}
 
+	/**
+	 * 리뷰 글 수정
+	 * 
+	 * 수정 요청 글No와 리뷰 content, 남겨진 기존파일, 새롭게 업로드된 파일 정보가 담긴 ReviewUpdateRequest받습니다.
+	 * review 유효성과 작성자 여부 체크 후 
+	 * 해당 리뷰 글의 UPDATE를 진행합니다.
+	 * 이후 해당 리뷰에 해당하는 키워드 매핑을 DELETE 후 다시 CREATE 합니다.
+	 * 파일 수정은 먼저 새로운 파일을 S3에 업로드 후 DB에 기존 파일URL을 SELECT해와서
+	 * 새롭게 업로드해 받은 URL과 남겨진 기존 파일 URL을 조합한 뒤 
+	 * DB에 INSERT합니다.
+	 * DB 작업이 완료되면 삭제될 기존파일을 URL 통해 S3 삭제합니다.
+	 * 
+	 * @param reviewNo 게시글번호PK
+	 * @param review 요청: content 등 수정될 리뷰 본문 정보와 유지될 기존파일의 URL, 새롭게 생성될 파일 및 정렬순서가 담겨있습니다.
+	 * @param principal 사용자 정보, 비로그인의 경우 null 값
+	 */
 	@Override
 	@Transactional
 	public void update(Long reviewNo, ReviewUpdateRequest review, CustomUserDetails principal) {
@@ -291,29 +345,9 @@ public class ReviewServiceImpl implements ReviewService {
 		reviewMapper.deleteKeywordsById(reviewNo); // 삭제
 		reviewMapper.createReviewKeywordMap(reviewNo, review.getKeywordNos());
 
-		List<String> newFileUrls = new ArrayList<>();
-		
-		try {
-			if(review.getImages() != null) {
-				for(MultipartFile f : review.getImages()) {
-					if (f == null || f.isEmpty()) continue;
-					String url = s3service.fileSave(f, "reviews/" + reviewNo);
-					newFileUrls.add(url);
-				}
-			}
+		// 1. 새로운 파일 S3에 업로드
+		List<String> newFileUrls = s3manager.createFiles("review", reviewNo, review.getImages(), RETRY_ATTEMPT);
 
-		} catch (Exception e) {
-			// 예외 발생 시: 이전까지 업로드한 uploadUrl 전부 삭제 처리(되돌림)
-			for (String url : newFileUrls) {
-				try { 
-					s3service.deleteFile(url);
-				} catch (Exception ignore) {
-					// 실패 시 재시도
-					deleteWitRetry(url, 5);
-				}
-			}
-			throw e;
-		}
 		
 		
 		// 2. db에 기존파일 정보 배열 받기 SELECT
@@ -356,16 +390,13 @@ public class ReviewServiceImpl implements ReviewService {
         List<ReviewFileDTO> toKeep = new ArrayList<>();
         List<ReviewFileDTO> toDelete = new ArrayList<>();
 		
-        log.info("????????????????:{}", originFiles);
-        
 		for(ReviewFileDTO origin : originFiles) {
 			ReviewFileDTO req = existByNo.get(origin.getFileNo());
 			
 			if(req != null) {
-				toKeep.add(new ReviewFileDTO(
-								origin.getFileNo()
-								, origin.getFileUrl()
-								, req.getSortOrder()
+				toKeep.add(new ReviewFileDTO(origin.getFileNo(),
+											origin.getFileUrl(),
+											req.getSortOrder()
 							)
 						);
 			} else {
@@ -379,29 +410,26 @@ public class ReviewServiceImpl implements ReviewService {
 		reviewMapper.deleteFilesById(reviewNo);
 		
 		// 5. INSERT
-		for(ReviewFileDTO file : toUpdate) {
-			
-			reviewMapper.createReviewFile(
-					ReviewFileCreateVO.builder()
-					.reviewNo(reviewNo)
-					.fileUrl(file.getFileUrl())
-					.sortOrder(file.getSortOrder())
-					.isThumbnail(file.getSortOrder() == 1 ? "Y" : "N")
-					.build()
-					);
-		}
+		List<String> updateUrls = toUpdate.stream()
+										.map(ReviewFileDTO::getFileUrl)
+										.collect(Collectors.toList());
+		createFiles(reviewNo, updateUrls);
 		
 		// 6. S3 삭제
-		for(ReviewFileDTO f : toDelete) {
-			
-			try {
-				s3service.deleteFile(f.getFileUrl());
-			} catch (Exception e) {
-				deleteWitRetry(f.getFileUrl(), 5);
-			}
-		}
+		List<String> deleteUrls = toDelete.stream()
+										.map(ReviewFileDTO::getFileUrl)
+										.collect(Collectors.toList());
+		s3manager.deleteUrls(deleteUrls, RETRY_ATTEMPT);
 	}
 
+	/**
+	 * 베스트리뷰(오늘의리뷰) 글 전체 조회
+	 * 
+	 * 키워드에 따른 베스트 리뷰 글을 전체 조회합니다.
+	 * 스크롤 정보 주입 후 글을 조회합니다. 조회해온 글에 reviewNO별 키워드를 조회해 그룹핑해 주입하여 반환합니다.
+	 * 
+	 * @param req 기본적인 커서, 스크롤 정보와 사용자가 택할 키워드를 담습니다.
+	 */
 	@Override
 	public List<BestReviewListResponse> getBestReviewList(BestReviewPagingRequest req) {
 		
@@ -414,7 +442,7 @@ public class ReviewServiceImpl implements ReviewService {
 		
 		List<Long> reviewNos = reviews.stream()
                 .map(BestReviewListResponse::getReviewNo)
-                .toList();
+                .collect(Collectors.toList());
 
         List<KeywordRowDTO> rows = reviewMapper.getKeywordsByIds(reviewNos);
 
